--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
 
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <div class="container">
+    <app-root>Loading...</app-root>
+  </div>  
 </body>
 </html>
